; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_anycollseq.c_anyCollNeeded.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_anycollseq.c_anyCollNeeded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@anyCollFunc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32, i8*)* @anyCollNeeded to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @anyCollNeeded(i8* %0, i32* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @anyCollFunc, align 4
  %13 = call i32 @sqlite3_create_collation(i32* %9, i8* %10, i32 %11, i32 0, i32 %12)
  ret void
}

declare dso_local i32 @sqlite3_create_collation(i32*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
